[package]
name = "flexibleeth"
version = "0.1.0"
edition = "2021"
authors = ["Lei Yang <leiy@csail.mit.edu>", "Joachim Neu <jneu@stanford.edu>"]
publish = false
description = "Proof-of-concept implementation of Ethereum flexible confirmation-rule"


[dependencies]
bincode = "1.3.3"
clap = { version = "4.3.3", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
ratelimit = "0.7.0"
reqwest = "0.11.18"
rocksdb = "0.21.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["full"] }
ruint = { version = "1.8.0", features = ["serde"] }
serde-aux = "4.2.0"
libc = "0.2.147"
num_cpus = "1.16.0"
